--- a/templates/editFab.html
+++ b/templates/editFab.html
@@ -2,4 +2,7 @@
     <a class="btn-floating btn-large red">
       <i class="large material-icons">mode_edit</i>
     </a>
+    <ul>
+      <li><a class="btn-floating blue" id="l10n-fab"><i class="material-icons">translate</i></a></li>
+    </ul>
 </div>
