--- a/templates/thread.html
+++ b/templates/thread.html
@@ -23,6 +23,7 @@
           {% include 'replyThreadForm.html' %}
         </div>
         {% include 'modalNewThread.html' %}
+        {% include 'modalL10n.html' %}
         {% include 'editFab.html' %}
         <script>$(document).ready(function(){$('.fixed-action-btn').floatingActionButton();$('.modal').modal();});</script>
     </div>
