--- a/templates/editFab.html
+++ b/templates/editFab.html
@@ -1,8 +1,9 @@
-<div class="fixed-action-btn" id="edit-fab">
+<div class="fixed-action-btn">
     <a class="btn-floating btn-large red">
-      <i class="large material-icons">mode_edit</i>
+      <i class="large material-icons">menu</i>
     </a>
     <ul>
       <li><a class="btn-floating blue" id="l10n-fab"><i class="material-icons">translate</i></a></li>
+      <li><a class="btn-floating green" id="edit-fab"><i class="material-icons">mode_edit</i></a></li>
     </ul>
 </div>
