--- a/templates/modalL10n.html
+++ b/templates/modalL10n.html
@@ -1,5 +1,20 @@
-<div id="modalL10nSettings">
+<div id="modalL10nSettings" class="modal">
     <div class="modal-content" id="l10nSettingsModal">
         <h4 class="translate" data-identifier="l10n.settings.title">语言设置</h4>
+        <form id="l10nForm" onsubmit="return false;">
+            <div class="input-field col s12">
+                <select>
+                {% for lang in langs.keys() %}
+                  <option value="{{lang}}">{{lang}}</option>
+                {% endfor %}
+                </select>
+                <label class="translate" data-identifier="l10n.settings.selectLanguage">选择语言</label>
+              </div>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <a id="l10nSubmitButton" class="waves-effect waves-green btn-flat translate" data-identifier="l10n.settings.submit">提交</a>
+        <a class="modal-close waves-effect waves-green btn-flat translate" data-identifier="l10n.settings.close">关闭</a>
     </div>
 </div>
+<script>$(document).ready(function(){$('select').formSelect();});</script>
