--- a/templates/script.html
+++ b/templates/script.html
@@ -17,6 +17,8 @@
 
     var currentThreadId = "{% if thread['thread'] %}{{thread['thread']}}{% endif %}";
 
+    var language = "en_us"; // 之后做语言选择
+
     function newThreadModal() {
         $('#modalNewThread').modal('open');
     }
@@ -66,6 +68,19 @@
     }
 
     $("#newThreadButton").click(newThread);
+
+    function l10nSet() {
+        var formObject = {}
+        var formArray = $("#l10nForm").serializeArray();
+        $.each(formArray, function (i, item) {
+            formObject[item.name] = item.value;
+        });
+        language = formObject['language'];
+        callTranslate(document.querySelectorAll(".translate"))
+        $('#modalL10nSettings').modal('close');
+    }
+
+    $("#l10nSubmitButton").click(l10nSet);
 
     function replyThread() {
         var formObject = {}
@@ -204,8 +219,6 @@
 
     var dict =
     {{ langs|safe }}
-
-    var language = "en_us" // 之后做语言选择
 
     // 选择需要观察变动的节点
     var targetNode = document.querySelector('body');
