Well not really

--- a/templates/script.html
+++ b/templates/script.html
@@ -17,7 +17,7 @@
 
     var currentThreadId = "{% if thread['thread'] %}{{thread['thread']}}{% endif %}";
 
-    var language = "en_us"; // 之后做语言选择
+    var language = "zh_cn"; // 语言选择见Fab
 
     function newThreadModal() {
         $('#modalNewThread').modal('open');
