--- a/templates/script.html
+++ b/templates/script.html
@@ -220,6 +220,7 @@
     var dict =
     {{ langs|safe }}
 
+    // 暂时似乎不起作用，Toast无法被翻译
     // 选择需要观察变动的节点
     var targetNode = document.querySelector('body');
 
