--- a/templates/modalL10n.html
+++ b/templates/modalL10n.html
@@ -13,8 +13,8 @@
         </form>
     </div>
     <div class="modal-footer">
-        <a id="l10nSubmitButton" class="waves-effect waves-green btn-flat translate" data-identifier="l10n.settings.submit">提交</a>
-        <a class="modal-close waves-effect waves-green btn-flat translate" data-identifier="l10n.settings.close">关闭</a>
+        <a id="l10nSubmitButton" class="waves-effect waves-grey btn-flat translate" data-identifier="l10n.settings.submit">提交</a>
+        <a class="modal-close waves-effect waves-grey btn-flat translate" data-identifier="l10n.settings.close">关闭</a>
     </div>
 </div>
 <script>$(document).ready(function(){$('select').formSelect();});</script>
