--- a/templates/modalNewThread.html
+++ b/templates/modalNewThread.html
@@ -20,7 +20,7 @@
       </form>
     </div>
     <div class="modal-footer">
-      <a id="newThreadButton" class="waves-effect waves-green btn-flat translate" data-identifier="newThread.submit">提交</a>
-      <a class="modal-close waves-effect waves-green btn-flat translate" data-identifier="newThread.close">关闭</a>
+      <a id="newThreadButton" class="waves-effect waves-grey btn-flat translate" data-identifier="newThread.submit">提交</a>
+      <a class="modal-close waves-effect waves-grey btn-flat translate" data-identifier="newThread.close">关闭</a>
     </div>
 </div>
