--- a/templates/announcement.html
+++ b/templates/announcement.html
@@ -9,4 +9,7 @@
             </ul>
         </div>
     </div>
+    {% include 'l10nFab.html' %}
+    {% include 'modalL10n.html' %}
+    <script>$(document).ready(function(){$('.fixed-action-btn').floatingActionButton();$('.modal').modal();});</script>
 </main>
