--- a/templates/header.html
+++ b/templates/header.html
@@ -5,7 +5,7 @@
     <ul class="right hide-on-med-and-down">
       <li><a href="{{ url_for('index') }}" class="translate" data-identifier="navigation.home">主页</a></li>
       <li><a href="{{ url_for('public') }}" class="translate" data-identifier="navigation.public">公告</a></li>
-      <li><a href="{{ url_for('logging') }}" class="translate" data-identifier="navigation.login">登录</a></li>
+      <li><a href="{{ url_for('login_page') }}" class="translate" data-identifier="navigation.login">登录</a></li>
     </ul>
     <ul id="nav-mobile" class="sidenav">
         <li><div class="user-view" style="padding:8em 0.8em 0;">
@@ -16,7 +16,7 @@
       </div></li>
       <li><a class="waves-effect translate" href="{{ url_for('index') }}" data-identifier="navigation.home">主页</a></li>
       <li><a class="waves-effect translate" href="{{ url_for('public') }}" data-identifier="navigation.public">公告</a></li>
-      <li><a class="waves-effect translate" href="{{ url_for('logging') }}" data-identifier="navigation.login">登录</a></li>
+      <li><a class="waves-effect translate" href="{{ url_for('login_page') }}" data-identifier="navigation.login">登录</a></li>
     </ul>
   </div>
 </nav>
