--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
                             <div>
                                 <input class="btn" type="submit" value="LOG IN">
                             </div>
-                            <a href="/register" class="btn-flat" data-identifier="login.registerButton">注册</a>
+                            <a href="{{ url_for('register_page') }}" class="btn-flat" data-identifier="login.registerButton">注册</a>
                         </form>
                     </div>
                 </div>
