--- a/templates/announcement.html
+++ b/templates/announcement.html
@@ -3,8 +3,8 @@
         <div class="col s12">
             <ul class="collection with-header">
                 <li class="collection-header" ><h4 class="translate" data-identifier="public.title">公告</h4></li>
-                {% for announcement in announcements %}
-                <li class="collection-item">{{announcement['title']}} ({{announcement['thread']}}) <a href="/thread/{{announcement['thread']}}" class="secondary-content"><i class="material-icons">arrow_forward</i></a></div></li>
+                {% for public in publics %}
+                <li class="collection-item">{{public['title']}} ({{public['thread']}}) <a href="/thread/{{public['thread']}}" class="secondary-content"><i class="material-icons">arrow_forward</i></a></div></li>
                 {% endfor %}
             </ul>
         </div>
