--- a/templates/announcementView.html
+++ b/templates/announcementView.html
@@ -3,7 +3,7 @@
 {% include 'head.html' %}
 <body>
     {% include 'header.html' %}
-        {% include  'announcement.html' %}
+        {% include  'public.html' %}
     {% include 'footer.html' %}
     {% include 'script.html' %}
 </body>
